issues and code updates - no more description

--- a/comicScrape.ipynb
+++ b/comicScrape.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "205753b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from requests.packages.urllib3.exceptions import InsecureRequestWarning\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "import re\n",
+    "requests.packages.urllib3.disable_warnings(InsecureRequestWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "id": "d9410a6a",
    "metadata": {},
@@ -27,6 +43,36 @@
     "    \n",
     "    \n",
     "    #https://files1.comics.org//img/gcd/covers_by_id/210/w400/210532.jpg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4b41e76b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1956)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "image_url = \"https://www.comics.org/issue/361802/cover/4/\"\n",
+    "headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/113.0'}\n",
+    "# used proxies because of connection restrictions (can be removed)\n",
+    "proxies = {\n",
+    "    'http': 'http://127.0.0.1:8080',\n",
+    "    'https': 'http://127.0.0.1:8080'\n",
+    "}\n",
+    "# Send a GET request to the image URL\n",
+    "response = requests.get(image_url, headers=headers, proxies=proxies, verify=False)\n",
+    "soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "date = soup.find(\"div\", class_=\"right\").get_text(strip=True)\n",
+    "print(date)"
    ]
   },
   {
